--- a/midterm/master_piece.html
+++ b/midterm/master_piece.html
@@ -3,17 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="./css/all.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>midterm</title>
 </head>
-<body class="background-image">
-
-	<div class="wrap">
+<body>
 		<div class="long-bar">
 			<div class="block-in-bar1"></div>
 			<div class="block-in-bar2"></div>
 			<div class="block-in-bar3"></div>
 			<div class="clear"></div>
 		</div>
+
+	<div class="wrap">
 		<div class="container">
 			<div class="header">
 				<h1>
@@ -94,7 +95,7 @@
 						<p><a href="#"><span class="blue-font">Find</span></a> us near you</p>
 						<form action="#" method="POST">
 							<input type="text" placeholder="Enter your zip" class="find-us-input">
-							<input type="submit" class="search-button" value="SEARCH" /> 
+							<input type="submit" class="search-button" value="SEARCH" />
 						</form>
 					</div>
 					<div class="clear"></div>
